Simplify MonarchPanel.